language_tests/source_files/valid/projection_normalize_impl_generic_check.tr
// CHECK_ONLY
// Repro: projection normalization through a generic impl target should not leak inference vars.

interface Carrier {
    type Item
}

struct Wrap[Element] {}

impl[Element] Carrier for &Wrap[Element] {
    type Item = Element
}

func takesCarrierItem[C: Carrier](_ carrier: C, _ item: C.Item) -> C.Item {
    item
}

func main() {
    let wrap = Wrap[int32] {}
    let result = takesCarrierItem(&wrap, 7 as int32)
    let typed: int32 = result
    let _ = typed
}
