language_tests/source_files/invalid/binding_assoc_mismatch.tr
interface Carrier {
    type Item
}

struct IntCarrier {}

impl Carrier for IntCarrier {
    type Item = int32
}

func needBool[T: Carrier[Item = bool]](_ value: T) {}

func main() {
    let c = IntCarrier {}
    needBool(c)
}
